--- a/templates/template.debug.gdextension.in
+++ b/templates/template.debug.gdextension.in
@@ -1,11 +1,12 @@
 [configuration]
-entry_symbol = "GDExtensionInit"
-compatibility_minimum = 4.1
+entry_symbol = "RtiConnextDdsConnectorInit"
+compatibility_minimum = 4.3
 
 [icons]
-Example = "icons/Example.svg"
+Example = "icons/logo.png"
 
 [libraries]
 linux.debug.x86_64 = "lib/Linux-x86_64/lib${PROJECT_NAME}-d.so"
-macos.debug = "lib/Darwin-Universal/lib${PROJECT_NAME}-d.dylib"
+macos.debug.arm64 = "lib/Darwin-Universal/lib${PROJECT_NAME}-d.dylib"
+macos.debug.x86_64 = "lib/Darwin-Universal/lib${PROJECT_NAME}-d.dylib"
 windows.debug.x86_64 = "lib/Windows-AMD64/${LIB_PREFIX}${PROJECT_NAME}-d.dll"
