--- a/templates/template.release.gdextension.in
+++ b/templates/template.release.gdextension.in
@@ -1,11 +1,12 @@
 [configuration]
-entry_symbol = "GDExtensionInit"
-compatibility_minimum = 4.1
+entry_symbol = "RtiConnextDdsConnectorInit"
+compatibility_minimum = 4.3
 
 [icons]
-Example = "icons/Example.svg"
+Example = "icons/logo.png"
 
 [libraries]
 linux.release.x86_64 = "lib/Linux-x86_64/lib${PROJECT_NAME}.so"
-macos.release = "lib/Darwin-universal/lib${PROJECT_NAME}.dylib"
+macos.debug.arm64 = "lib/Darwin-universal/lib${PROJECT_NAME}.dylib"
+macos.debug.x86_64 = "lib/Darwin-universal/lib${PROJECT_NAME}.dylib"
 windows.release.x86_64 = "lib/Windows-AMD64/${LIB_PREFIX}${PROJECT_NAME}.dll"
